Fixed some errors in pom.xml and servlets